// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`diff openapi can diff an openapi spec 1`] = `
[
  {
    "after": "/paths/~1example/get/responses/200/content/application~1json/schema/properties/toTypeArrays/type",
    "before": "/paths/~1example/get/responses/200/content/application~1json/schema/properties/toTypeArrays/type",
  },
  {
    "after": "/paths/~1example/get/responses/200/content/application~1json/schema/properties/fromTypeArrays/type",
    "before": "/paths/~1example/get/responses/200/content/application~1json/schema/properties/fromTypeArrays/type",
  },
  {
    "after": "/paths/~1example/get/responses/200/content/application~1json/schema/properties/nonNullableToNullable/nullable",
  },
  {
    "before": "/paths/~1example/get/responses/200/content/application~1json/schema/properties/nullableToNonNullable/nullable",
    "pathReconciliation": [],
  },
  {
    "before": "/paths/~1example/get/responses/200/content/application~1json/schema/properties/requiredKeys/required/0",
    "pathReconciliation": [],
  },
  {
    "before": "/paths/~1example/get/responses/200/content/application~1json/schema/properties/requiredKeys/required/1",
    "pathReconciliation": [],
  },
  {
    "after": "/paths/~1example/get/responses/200/content/application~1json/schema/properties/requiredKeys/required/0",
  },
  {
    "after": "/paths/~1example/get/responses/200/content/application~1json/schema/properties/requiredKeys/required/1",
  },
  {
    "before": "/paths/~1example/get/responses/200/content/application~1json/schema/properties/requiredKeys/properties/deletedRequiredKey",
    "pathReconciliation": [],
  },
  {
    "after": "/paths/~1example/get/responses/200/content/application~1json/schema/properties/requiredKeys/properties/addedRequiredKey",
  },
  {
    "after": "/paths/~1example/get/responses/200/content/application~1json/schema/properties/expandableObject/anyOf/1",
  },
  {
    "after": "/paths/~1example/get/responses/200/content/application~1json/schema/properties/composedObject/allOf/0/properties/orderId/type",
    "before": "/paths/~1example/get/responses/200/content/application~1json/schema/properties/composedObject/allOf/0/properties/orderId/type",
  },
  {
    "before": "/paths/~1example/get/responses/200/content/application~1json/schema/properties/stringOrNumberOrObject/oneOf/2",
    "pathReconciliation": [],
  },
  {
    "before": "/paths/~1example/get/parameters/2",
    "pathReconciliation": [],
  },
  {
    "after": "/paths/~1example/get/parameters/2",
  },
  {
    "before": "/paths/~1example/get/parameters/1/required",
    "pathReconciliation": [],
  },
  {
    "after": "/paths/~1example/get/parameters/0/required",
  },
  {
    "before": "/paths/~1api~1users/post",
    "pathReconciliation": [],
  },
  {
    "before": "/paths/~1api~1users/get/requestBody/content/application~1json/schema/required",
    "pathReconciliation": [],
  },
  {
    "before": "/paths/~1api~1users/get/requestBody/content/application~1json/schema/properties/photoUrls",
    "pathReconciliation": [],
  },
  {
    "after": "/info/title",
    "before": "/info/title",
  },
]
`;

exports[`diff openapi diff behavior adding a key 1`] = `
[
  {
    "after": "/added",
  },
]
`;

exports[`diff openapi diff behavior changing a key type (false) 1`] = `
[
  {
    "after": "/changed",
    "before": "/changed",
  },
]
`;

exports[`diff openapi diff behavior changing a key type (objects) 1`] = `
[
  {
    "after": "/changed",
    "before": "/changed",
  },
]
`;

exports[`diff openapi diff behavior changing a key type (primitives) 1`] = `
[
  {
    "after": "/changed",
    "before": "/changed",
  },
]
`;

exports[`diff openapi diff behavior changing a key value 1`] = `
[
  {
    "after": "/changed",
    "before": "/changed",
  },
]
`;

exports[`diff openapi diff behavior removing a key 1`] = `
[
  {
    "before": "/removed",
    "pathReconciliation": [],
  },
]
`;

exports[`diff openapi diff behavior removing a key with path reconciliation 1`] = `
[
  {
    "before": "/parameters/0/nested/schema/removeme",
    "pathReconciliation": [
      [
        1,
        "2",
      ],
    ],
  },
]
`;

exports[`diff openapi diff with array values diffs for parameters 1`] = `
[
  {
    "before": "/1",
    "pathReconciliation": [],
  },
]
`;

exports[`diff openapi diff with array values diffs for positional values (fallback case) 1`] = `
[
  {
    "after": "/1",
    "before": "/1",
  },
  {
    "before": "/2",
    "pathReconciliation": [],
  },
]
`;

exports[`diff openapi diff with array values diffs for primitive values 1`] = `
[
  {
    "before": "/1",
    "pathReconciliation": [],
  },
]
`;

exports[`diff openapi diff with array values diffs operations even if variable names change  1`] = `
[
  {
    "after": "/paths/~1user~1{user_Id}/get/operationId",
    "before": "/paths/~1user~1{userId}/get/operationId",
  },
]
`;

exports[`diff openapi diff with array values diffs operations even if variable names change request body 1`] = `
[
  {
    "before": "/paths/~1user~1{userId}/get/requestBody/content/application~1json/schema/properties/abc",
    "pathReconciliation": [
      [
        1,
        "/user/{user_Id}",
      ],
    ],
  },
]
`;

exports[`diff openapi diff with empty array 1`] = `
[
  {
    "after": "/info",
  },
  {
    "after": "/openapi",
  },
  {
    "after": "/paths",
  },
]
`;
